# telco-churn-retention

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  activate_venv.bat  activate_venv.ps1  docker-compose.yml  pyproject.toml  setup_venv.ps1
.github/workflows/: ci.yml
configs/: model_config.json
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: architecture.md  business_assumptions.md  coding_standards.md  environment_variables.md  modeling.md  roadmap.md
notebooks/: phase0_setup.ipynb  phase1_eda.ipynb  phase2_feature_engineering.ipynb  phase3_modeling.ipynb  phase4_api_serving.ipynb  phase5_monitoring.ipynb  phase6_business_intelligence.ipynb
reports/: phase1_eda.md
reports/validation/: phase1.json
scripts/: display_notebook_outputs.py  run_phase1_data_intake.py  run_phase2_feature_engineering.py  run_phase3_modeling.py  run_phase4_api.py  run_phase4_streaming.py  run_phase5_monitoring.py  run_phase5_monitoring_auto.py  run_phase5_retraining.py  run_phase6_business.py
src/: __init__.py
src/api/: __init__.py  app.py  business_routes.py  middleware.py  models.py  service.py  streaming.py
src/business/: __init__.py  clv.py  cohorts.py  experiments.py  journey.py  kpis.py  playbooks.py  reports.py  roi.py
src/data/: __init__.py  eda.py  ingestion.py  validation.py
src/features/: __init__.py  pipeline.py  store.py  transformers.py
src/models/: __init__.py  baseline.py  evaluation.py  explainability.py  trainer.py
src/monitoring/: __init__.py  alerts.py  dashboard.py  drift.py  performance.py
src/pipelines/: __init__.py  retraining_dag.py
src/utils/: logging_config.py  retry.py
tests/: __init__.py  test__api.py  test_data_eda.py  test_data_ingestion.py  test_features.py  test_monitoring.py  test_shap_explanations.py  test_streaming_pipeline.py
