[project]
name = "telco-churn-retention"
version = "0.1.0"
description = "Telco churn retention modeling platform"
authors = [{ name = "Your Team" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "great-expectations>=0.18",
    "rich>=13.7"
]

[project.optional-dependencies]
eda = [
    "ydata-profiling>=4.6",
    "matplotlib>=3.8",
    "seaborn>=0.13"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

