[project]
name = "telco-churn-retention"
version = "0.1.0"
description = "Telco churn retention modeling platform"
authors = [{ name = "Your Team" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "great-expectations>=0.18",
    "rich>=13.7",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.4",
    "mlflow>=2.8",
    "shap>=0.43",
    "imbalanced-learn>=0.11",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "ipykernel>=6.0",  # Required for notebook execution
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "redis>=5.0",
    "kafka-python>=2.0",
    "scipy>=1.11",
    "requests>=2.31",
    "seaborn>=0.13",
    "python-dotenv>=1.0",  # For loading .env files
]

[project.optional-dependencies]
eda = [
    "ydata-profiling>=4.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0"
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.7",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.5"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "E402",  # module level import not at top of file (needed for sys.path modification)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = ["E402"]  # Allow imports after sys.path modification

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "great_expectations.*",
    "ydata_profiling.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

